--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,2 @@
-<h1> Hii...I am Tushar Titame</h1>
-<p>Hello World......</p>
+<marquee><color="Red">Hii...We are Tushar..Kunal..Sarika</color></marquee>
+<p>Project in progress......</p>
