--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,4 @@
-<marquee><color="Red">Hii...We are Tushar..Kunal..Sarika</color></marquee>
+<body bgcolor="black">
+<marquee><font color="Red"><h1>Hii...We are Tushar..Kunal..Sarika</h1></font></marquee>
 <p>Project in progress......</p>
+</body>
