--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
 <body bgcolor="black">
 <marquee><font color="Red"><h1>Hii...We are Tushar..Kunal..Sarika</h1></font></marquee>
-<p>Project in progress......</p>
+<p><font color="Green">Project in progress......</font></p>
 </body>
