--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
-
-<h1> Our blog</h1>
-<p>Hello World</p>
+<body bgcolor="black">
+<marquee><font color="Red"><h1>Hii...We are Tushar..Kunal..Sarika</h1></font></marquee>
+<p><font color="Green">Project in progress......</font></p><br>
+</body>
