--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,5 @@
 <body bgcolor="black">
 <marquee><font color="Red"><h1>Hii...We are Tushar..Kunal..Sarika</h1></font></marquee>
 <p><font color="Green">Project in progress......</font></p><br>
+<img src"C:\Sites\blog\lion.jpg"><br>
 </body>
